# optas

./: .gitignore  .gitmodules  CITATION.bib  CITATION.cff  LICENSE  README.md  README.org  README_8md.html  ____init_____8py.html  annotated.html  builder_8py.html  classes.html  classoptas_1_1builder_1_1OptimizationBuilder-members.html  classoptas_1_1builder_1_1OptimizationBuilder.html  classoptas_1_1models_1_1JointTypeNotSupported-members.html  classoptas_1_1models_1_1JointTypeNotSupported.html  classoptas_1_1models_1_1JointTypeNotSupported__inherit__graph.map  classoptas_1_1models_1_1JointTypeNotSupported__inherit__graph.md5  classoptas_1_1models_1_1Model-members.html  classoptas_1_1models_1_1Model.html  classoptas_1_1models_1_1Model__inherit__graph.map  classoptas_1_1models_1_1Model__inherit__graph.md5  classoptas_1_1models_1_1RobotModel-members.html  classoptas_1_1models_1_1RobotModel.html  classoptas_1_1models_1_1RobotModel__coll__graph.map  classoptas_1_1models_1_1RobotModel__coll__graph.md5  classoptas_1_1models_1_1TaskModel-members.html  classoptas_1_1models_1_1TaskModel.html  classoptas_1_1models_1_1TaskModel__coll__graph.map  classoptas_1_1models_1_1TaskModel__coll__graph.md5  classoptas_1_1optimization_1_1MixedIntegerNonlinearCostNonlinearConstrained-members.html  classoptas_1_1optimization_1_1MixedIntegerNonlinearCostNonlinearConstrained.html  classoptas_1_1optimization_1_1MixedIntegerNonlinearCostNonlinearConstrained__coll__graph.md5  classoptas_1_1optimization_1_1MixedIntegerNonlinearCostNonlinearConstrained__inherit__graph.map  (+190 more)
doc/: Doxyfile  README.md  (+2 more)
(+254 files in other folders)
